--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "laravelcollective/html": "^6.4",
         "maatwebsite/excel": "^3.1",
-        "phpoffice/phpspreadsheet": "1.18"
+        "phpoffice/phpspreadsheet": "1.18",
+        "spatie/laravel-permission": "^5.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
