--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4",
+        "laraveldaily/laravel-charts": "^0.2.3",
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "1.18",
         "spatie/laravel-permission": "^5.11"
